[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legacy_data_env"
version = "0.1.0"
authors = [{name = "Shashwat Verma"}]
description = "RL environment for legacy database migration."
dependencies = [
    "openenv-core>=0.1.13",
    "numpy",
    "pydantic",
    "fastapi",
    "uvicorn",
]
requires-python = ">=3.10"

[project.scripts]
openenv-server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["envs*", "server*"]